force-app/main/default/objects/MO_Template_by_Response_Type__c/MO_Template_by_Response_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>MO View Approval Process Email Templates with category</description>
    <label>MO Template by Response Type</label>
</CustomObject>