force-app/main/default/objects/MO_Template_by_Response_Type__c/fields/Additional_Contact_Attachment_Categories__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Attachment_Categories__c</fullName>
    <label>Additional Contact Attachment Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>