force-app/main/default/objects/MO_Template_by_Response_Type__c/fields/Additional_Contacts_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contacts_Email_Template__c</fullName>
    <label>Additional Contacts Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>