force-app/main/default/objects/MO_Template_by_Response_Type__c/fields/Contact_Attachment_Categories__c.field-meta.xml
<CustomField>
    <fullName>Contact_Attachment_Categories__c</fullName>
    <label>Contact Attachment Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>