force-app/main/default/objects/MO_Template_by_Response_Type__c/fields/Customer_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_Template__c</fullName>
    <label>Customer Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>