force-app/main/default/objects/MO_Template_by_Response_Type__c/fields/Staff_Attachment_Categories__c.field-meta.xml
<CustomField>
    <fullName>Staff_Attachment_Categories__c</fullName>
    <label>Staff Attachment Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>